traces/bug_142.txt
examples++-load/gmsh.cpp:208: error: DEAD_STORE
  The value written to &partition (type int) is never used.
Showing all 1 steps of the trace


examples++-load/gmsh.cpp:208:21: Write of unused value
206.   		  if(j == 0)      physical = tag;
207.   		  else if(j == 1) elementary = tag;
208.   		  else if(j == 2) partition = tag;
                           ^
209.   		  // ignore any other tags for now
210.   		}
